# glvingin

./: .gitignore  CMakeLists.txt
res/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/ECS/: AComponent.cpp  AComponent.h  AEntity.cpp  AEntity.h  ASystem.cpp  ASystem.h  CMakeLists.txt  Component.cpp  Component.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  Manager.cpp  Manager.h
src/ECS/Components/: AnimatedSprite2D.cpp  AnimatedSprite2D.h  BoxCollider2D.cpp  BoxCollider2D.h  CircleCollider2D.cpp  CircleCollider2D.h  Health.cpp  Health.h  HealthVisual.cpp  HealthVisual.h  Sprite2D.cpp  Sprite2D.h  Transform2D.cpp  Transform2D.h
src/ECS/Entities/: Player.cpp  Player.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine2D.cpp  Engine2D.h  Engine3D.cpp  Engine3D.h  EngineEnums.h  IEngine.h
src/Engine/Audio/: AMusic.cpp  AMusic.h  ASound.cpp  ASound.h  AudioManager.cpp  AudioManager.h
src/Engine/Event/: AEventDispatcher.cpp  AEventDispatcher.h  AEventListener.cpp  AEventListener.h  EventDispatcher.cpp  EventDispatcher.h  IEventDispatcher.h  IEventListener.h  SDLEventDispatcher.cpp  SDLEventDispatcher.h
src/Engine/Graphics/Font/: AFont.cpp  AFont.h  FontManager.cpp  FontManager.h  GLFont.cpp  GLFont.h  SDLFont.cpp  SDLFont.h
src/Engine/Graphics/Renderer/: ARenderer.cpp  ARenderer.h  IRenderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
src/Engine/Graphics/Texture/: ATexture.cpp  ATexture.h  GLTexture.cpp  GLTexture.h  ITexture.h  SDLTexture.cpp  SDLTexture.h  TextureManager.cpp  TextureManager.h
src/Engine/Graphics/Widget/: AWidget.cpp  AWidget.h  SDLButton.cpp  SDLButton.h  SDLButtonIMG.cpp  SDLButtonIMG.h  SDLImage.cpp  SDLImage.h  SDLListView.cpp  SDLListView.h  SDLText.cpp  SDLText.h
src/Engine/Graphics/Window/: GLWindow.cpp  GLWindow.h  GLWindowWrapper.cpp  GLWindowWrapper.h  IWindow.h  IWindowWrapper.h  SDLWindow.cpp  SDLWindow.h  SDLWindowWrapper.cpp  SDLWindowWrapper.h
src/Engine/Timer/: Timer.cpp  Timer.h
src/IDs/: AudioIDs.h  CMakeLists.txt  EntityIDs.h  EventIDs.h  FontIDs.h  IDs.cpp  LayerIDs.h  SceneIDs.h  TextureIDs.h
src/SceneManager/: ALayer.cpp  ALayer.h  AScene.cpp  AScene.h  CMakeLists.txt  GameScene.cpp  GameScene.h  LayerManager.cpp  LayerManager.h  MenuScene.cpp  MenuScene.h  SceneManager.cpp  SceneManager.h
src/SceneManager/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Script/: CMakeLists.txt  Script.cpp  Script.h
src/Script/Scenes/GameScene/: GameScene.cpp  GameScene.h
src/Script/Scenes/GameScene/Entities/: Player.cpp  Player.h
src/Script/Scenes/MenuScene/: MenuScene.cpp  MenuScene.h
src/Script/Scenes/MenuScene/Entities/: ExitButton.cpp  ExitButton.h  MenuBackground.cpp  MenuBackground.h  SettingButton.cpp  SettingButton.h  StartButton.cpp  StartButton.h
src/Script/Scenes/MenuScene/Layers/: BackgroundLayer.cpp  BackgroundLayer.h  UILayer.cpp  UILayer.h
src/Script/Scenes/SettingScene/: SettingScene.cpp  SettingScene.h
src/Utilities/: CMakeLists.txt  IOC.cpp  IOC.h
src/Utilities/DataStruct/: QuadTree.cpp  QuadTree.h
src/Utilities/Math/: Vec2.h
